# CLI-tool-for-S3-Bucket

./: .env.example  README.md  pyproject.toml
s3_tool/: cli.py  s3.py
