[tool.poetry]
name = "s3-tool"
version = "0.1.0"
description = "A comfortable CLI tool for working with AWS S3"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34"
python-dotenv = "^1.0"
click = "^8.1"
python-magic = "^0.4.27"

[tool.poetry.scripts]
s3tool = "s3_tool.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
